# deploy_pp_time_traking

./: .dockerignore  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  gitflic-ci.yaml  skills-lock.json
server/: .cz.toml  .env.sample  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
server/Backend/: .dockerignore  .env  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
server/Backend/alembic/: env.py  script.py.mako
server/Backend/alembic/versions/: 0001_create_tasks_and_time_intervals.py  0002_users_auth_roles_profile.py  0003_task_deadline_priority.py  0004_unique_active_interval.py  0005_performance_indexes.py  0006_projects.py  0007_task_completion.py  0008_project_icons.py  0009_workspaces.py  0010_user_avatar_seed.py  0011_notifications.py  0012_performance_workspace_indexes.py  0013_deadline_timezone_aware.py  0014_database_integrity_constraints.py  0015_protected_space.py  0016_task_comments.py  0017_resend_email_notifications.py  0018_team_invitations_email_verification.py  0019_email_defaults_for_new_users.py  b25778ee8fd4_manual_migration.py
server/Backend/observability/prometheus/: prometheus.yml
server/Backend/observability/promtail/: promtail-config.yml
server/Backend/scripts/: docker-entrypoint.sh
server/Backend/src/: main.py
server/Backend/src/api/: deps.py  webhooks.py
server/Backend/src/api/v1/: __init__.py  admin.py  auth.py  events.py  invitations.py  notifications.py  projects.py  protected_space.py  summary.py  tasks.py  users.py  workspaces.py
server/Backend/src/cli/: __init__.py  diagnose_email_notification.py
server/Backend/src/core/: celery_app.py  config.py  deadlines.py  logging.py  metrics.py  security.py
server/Backend/src/db/: session.py
server/Backend/src/middleware/: request_id.py
server/Backend/src/models/: __init__.py  enums.py  invitation.py  notification.py  project.py  protected_space.py  registration.py  task.py  task_comment.py  time_interval.py  user.py  workspace.py
server/Backend/src/schemas/: auth.py  invitation.py  notification.py  project.py  protected_space.py  summary.py  task.py  task_comment.py  time_interval.py  user.py  workspace.py
server/Backend/src/scripts/: create_admin.py
server/Backend/src/services/: admin.py  auth.py  avatar.py  delivery_result.py  email_delivery.py  email_provider.py  email_sender.py  email_templates.py  identity.py  invitation.py  notification.py  project.py  protected_context.py  protected_space.py  rate_limit.py  registration.py  summary.py  task_authorization.py  task_comments.py  telegram_sender.py  timer.py  transactional_email.py  user.py  user_events.py  workspace.py
server/Backend/src/tasks/: db.py  notifications.py  transactional_email.py
server/Backend/tests/: conftest.py  test_admin.py  test_api_routes.py  test_auth_profile.py  test_celery_db.py  test_config.py  test_database_integrity_models.py  test_email_defaults_migration.py  test_notifications.py  test_projects.py  test_protected_space.py  test_registration_invitations.py  test_reports_event_refresh_contract.py  test_resend_email.py  test_summary_service.py  test_task_comments.py  test_timer_service.py  test_user_events.py  test_workspaces.py
server/Frontend/: README.md
server/alembic/: env.py
server/alembic/versions/: 0001_create_tasks_and_time_intervals.py
server/frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
server/frontend/src/: App.tsx  main.tsx
server/frontend/src/app/: RouteErrorPage.css  RouteErrorPage.tsx  router.tsx
server/frontend/src/components/ActivityGrid/: ActivityGrid.css  ActivityGrid.tsx
server/frontend/src/components/AdminLayout/: AdminLayout.css  AdminLayout.tsx
server/frontend/src/components/AdminRoute/: AdminRoute.css  AdminRoute.tsx
server/frontend/src/components/AdminUI/: AdminUI.css  AdminUI.tsx
server/frontend/src/components/ConfirmDialog/: ConfirmDialog.css  (+1 more)
server/frontend/src/i18n/: LocaleContext.tsx  index.ts  types.ts
server/frontend/src/pages/: adminFlow.contract.test.ts  securityFlow.contract.test.ts  settingsFlow.contract.test.ts
server/observability/loki/: loki-config.yml
server/observability/prometheus/: prometheus.yml
server/src/: main.py
server/src/api/v1/: summary.py  tasks.py
server/src/core/: config.py  logging.py
server/src/middleware/: request_id.py
server/src/models/: task.py  time_interval.py
server/src/services/: timer.py
server/tests/: conftest.py  test_summary_service.py
(+163 files in other folders)
