[project]
name = "time-tracking-backend"
version = "0.1.0"
description = "Учебный проект учёта времени выполнения задач"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.116.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "pydantic-settings>=2.7.0",
  "python-json-logger>=3.2.1",
  "sqlalchemy[asyncio]>=2.0.38",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "commitizen>=3.29.0",
  "mypy>=1.16.0",
  "pre-commit>=4.2.0",
  "python-semantic-release>=9.21.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = []

[[tool.mypy.overrides]]
module = ["prometheus_fastapi_instrumentator.*"]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
