[project]
name = "time-tracking-backend"
version = "0.1.0"
description = "Учебный проект учёта времени выполнения задач"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "bcrypt>=5.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "pydantic-settings>=2.7.0",
  "python-jose[cryptography]>=3.3.0",
  "python-json-logger>=3.2.1",
  "sqlalchemy[asyncio]>=2.0.38",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "commitizen>=3.29.0",
  "httpx>=0.28.1",
  "mypy>=1.16.0",
  "pre-commit>=4.2.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "python-semantic-release>=9.21.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = []
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[[tool.mypy.overrides]]
module = ["bcrypt.*", "jose.*", "prometheus_fastapi_instrumentator.*"]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
